# virtual-breadboard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
conf/: breadboard.json  leds.json  oled.json  oled_bidirectional.json  oled_noresponse_lua.json  oled_shield.json  sevensegment.json
devices/: CMakeLists.txt
devices/c/: button.cpp  button.h  oled.cpp  oled.h  rgb.cpp  rgb.h  sevensegment.cpp  sevensegment.h
devices/lua/: button.lua  led.lua  ssd1106.lua
src/: main.cpp
src/breadboard/: CMakeLists.txt  breadboard-connections.cpp  breadboard-json.cpp  breadboard-qt.cpp  breadboard-raster.cpp  breadboard.cpp  breadboard.h  constants.h  overlay.cpp  overlay.h  raster.cpp  raster.h  types.h
src/breadboard/dialog/: config.cpp  config.h  device_configuration.cpp  device_configuration.h  device_configurations.cpp  device_configurations.h  keybinding.cpp  keybinding.h  pins.cpp  pins.h
src/device/: CMakeLists.txt  configuration.h  device.cpp  device.hpp  raster.cpp  raster.h  types.h
src/device/factory/: cFactory.cpp  cFactory.h  configuration_errors.h  errors.h  factory.cpp  factory.h  luaFactory.cpp  luaFactory.hpp
src/device/interface/: cDevice.cpp  cDevice.h  luaDevice.cpp  luaDevice.hpp
src/embedded/: CMakeLists.txt  embedded.cpp  embedded.h  gpio-helpers.cpp  gpio-helpers.h  options.cpp  options.h  types.h
src/window/: CMakeLists.txt  central.cpp  central.h  window.cpp  window.h
